@@ -262,10 +262,6 @@ public class Vala.CodeGenerator : CodeVisitor {
 		}
 	}
 
-	public override void visit_namespace (Namespace! ns) {
-		ns.accept_children (this);
-	}
-
 	public override void visit_enum (Enum! en) {
 		cenum = new CCodeEnum (en.get_cname ());
 
